Fixed image path

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="card-side card-front">
         <img
           class="avatar"
-          src="images/ilona.png"
+          src="ilona.png"
           alt="ilona goldmane looking at camera holding up her long gold color hair by hand"
         />
         <div class="card-info">
